--- a/.gitmodules
+++ b/.gitmodules
@@ -1,21 +1,18 @@
 [submodule ".vim/bundle/piv"]
 	path = .vim/bundle/piv
-	url = git@github.com:spf13/PIV.git
+	url = http://github.com/spf13/PIV.git
 [submodule ".vim/bundle/nerdcommenter"]
 	path = .vim/bundle/nerdcommenter
 	url = git://github.com/scrooloose/nerdcommenter.git
-[submodule ".vim/bundle/supertab"]
-	path = .vim/bundle/supertab
-	url = http://github.com/tsaleh/vim-supertab.git
 [submodule ".vim/bundle/nerdtree"]
 	path = .vim/bundle/nerdtree
 	url = http://github.com/scrooloose/nerdtree.git
 [submodule ".vim/bundle/fugitive"]
 	path = .vim/bundle/fugitive
 	url = http://github.com/tpope/vim-fugitive.git
-[submodule ".vim/bundle/delimitMate"]
-	path = .vim/bundle/delimitMate
-	url = http://github.com/Raimondi/delimitMate.git
 [submodule ".vim/bundle/command-t"]
 	path = .vim/bundle/command-t
 	url = git://git.wincent.com/command-t.git
+[submodule ".vim/bundle/supertab"]
+	path = .vim/bundle/supertab
+	url = http://github.com/ervandew/supertab.git
